README: Added javax.annotation.Generated